# safe-harbor

./: .cursorrules  .gitignore  CLAUDE.md  INSTRUCTIONS.md  PR_DESCRIPTION_TEMPLATE.md  README.md  package-lock.json
.github/: pull_request_template.md
.github/workflows/: azure-static-web-apps-nice-beach-0045c401e.yml  ci.yml  main_safe-harbor.yml  ml-nightly-train.yml
docs/: CONTEXT.md  DECISIONS.md  Intex_Security_Requirements.md  SESSION-LOG.md  SETUP.md  ml-deployment.md  schema.sql
frontend/: .env.example  DESIGN_GUIDE.md  design-system.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ml-pipelines/: donor_churn_pipeline.ipynb  early_warning_incident_next_month.ipynb  high_value_donor_profiles.ipynb  reintegration_readiness_next_month.ipynb  requirements.txt  resident_wellbeing_next_month.ipynb  social_media_engagement_to_donations.ipynb
ml_api/: __init__.py  main.py  requirements.txt
ml_service/: README.md  pyproject.toml
ml_service/ml_service/: __init__.py
ml_service/ml_service/features/: __init__.py  donor_churn.py  donor_high_value.py  early_warning.py  reintegration_readiness.py  resident_wellbeing.py  social_engagement.py
models/: README.md  reintegration_rf.joblib  resident_wellbeing_rf.joblib  social_engagement_rf.joblib
plans/: 2026-04-06-intex-master-plan.md  2026-04-07-five-vertical-slices.md  2026-04-08-page-completion-sprint.md
scripts/: train_donor_churn.py  train_donor_high_value.py  train_early_warning.py  train_reintegration_readiness.py  train_resident_wellbeing.py  train_social_engagement.py
(+145 files in other folders)
