[project]
name = "safe-harbor-ml-service"
version = "0.1.0"
description = "Shared feature engineering for Safe Harbor ML training and inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_service*"]
